tests/golden/errors/prim_factory_on_scalar.py
from lyrt import from_prim
from lyrt.prim import Float

print(from_prim(Float[32].zeros()))
